[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logpy"
description = 'CLI for logging your life.'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["logging", "log"]
authors = [
  { name = "Robert Spralja", email = "robert.spralja@gmail.com" },
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/spralja/logpy#readme"
Issues = "https://github.com/spralja/logpy/issues"
Source = "https://github.com/spralja/logpy"

[tool.hatch.version]
path = "logpy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=logpy --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "logpy/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
